--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,12 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.7
 
     - run: pip install -r requirements.txt pyinstaller
     - run: pyinstaller --onefile --noconsole main.py
+    # Optionally verify that it works (provided that it does not need user interaction)
+    - run: ./dist/your-code/your-code
+    - uses: actions/upload-artifact@v2
+      with:
+        path: dist/*
