--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,3 +17,8 @@ jobs:
 
     - run: pip install -r requirements.txt pyinstaller
     - run: pyinstaller --onefile --noconsole main.py
+
+    - uses: actions/upload-artifact@v2
+    with:
+      name: zuckerburger-app
+      path: dist/main.exe
