--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,16 @@ jobs:
     - run: pip install -r requirements.txt pyinstaller
     - run: pyinstaller --onefile --noconsole main.py
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/checkout@v2
+    - name: Build
+      run: cargo build --release
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
       with:
-        name: zuckerburger-app
-        path: dist/main.exe
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: dist/main.exe
+        asset_name: mything
+        tag: ${{ github.ref }}
+        prerelease: true
+        overwrite: true
+        body: "gay"
