--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,4 +21,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: zuckerburger-app
-        path: dist/main.exe
+        path: |
+      dist/main.exe
+      assets/
+      
